# HeartMonitor

./: README.md
HeartMonitor/: CMakeLists.txt  CMakeLists.txt~  HeartMonitor.cpp  HeartMonitor.cpp~  HeartMonitor.h  HeartMonitor.h~  HeartMonitor.kdev4  customwidget.cpp~  customwidget.h~  main.cpp  main.cpp~  main.qrc~  main.rc~  qttest.cpp~  qttest.h~  qttest.kdev4~  trayiconmanager.cpp  trayiconmanager.cpp~  trayiconmanager.hpp  trayiconmanager.hpp~
HeartMonitor/.kdev4/: _custom.kdev4  qttest.kdev4
